src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Auction_Estimate__c</fullName>
        <label>Auction Estimate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ByeWeek__c</fullName>
        <label>ByeWeek</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depth_Order__c</fullName>
        <label>Depth Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFL_team__c</fullName>
        <label>NFL team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>BAL</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>CIN</fullName>
                </value>
                <value>
                    <fullName>CLE</fullName>
                </value>
                <value>
                    <fullName>DAL</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>DET</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>HOU</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>JAX</fullName>
                </value>
                <value>
                    <fullName>KC</fullName>
                </value>
                <value>
                    <fullName>LAC</fullName>
                </value>
                <value>
                    <fullName>LAR</fullName>
                </value>
                <value>
                    <fullName>MIA</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NYG</fullName>
                </value>
                <value>
                    <fullName>NYJ</fullName>
                </value>
                <value>
                    <fullName>OAK</fullName>
                </value>
                <value>
                    <fullName>PHI</fullName>
                </value>
                <value>
                    <fullName>PIT</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
                <value>
                    <fullName>STL</fullName>
                </value>
                <value>
                    <fullName>TB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Year_Salary__c</fullName>
        <formula>if (Salary__c = 0,0, Salary__c + 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Year Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QB</fullName>
                </value>
                <value>
                    <fullName>WR</fullName>
                </value>
                <value>
                    <fullName>RB</fullName>
                </value>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Salary</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Board__c</fullName>
        <label>Team Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Who&apos;s on First</fullName>
                </value>
                <value>
                    <fullName>Pantera</fullName>
                </value>
                <value>
                    <fullName>Sophomore Risers</fullName>
                </value>
                <value>
                    <fullName>Bronto Bolts</fullName>
                </value>
                <value>
                    <fullName>Elegantly Wasted</fullName>
                </value>
                <value>
                    <fullName>Free Agent</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>4th and Drunk</fullName>
                </value>
                <value>
                    <fullName>Freedom Buck o Five</fullName>
                </value>
                <value>
                    <fullName>Yager Bombers</fullName>
                </value>
                <value>
                    <fullName>UsCis.gov</fullName>
                </value>
                <value>
                    <fullName>Silly Nannies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Points_2016__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Points 2016</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wieght__c</fullName>
        <label>Wieght</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Experience__c</fullName>
        <label>Years Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fantasy_data_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>id from fantasy data api</description>
        <externalId>true</externalId>
        <inlineHelpText>id from fantasy data api</inlineHelpText>
        <label>fantasy data id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>last_season_ppg__c</fullName>
        <label>last season ppg</label>
        <summarizedField>Player_Team_Relationship__c.Points_Per_Game__c</summarizedField>
        <summaryFilterItems>
            <field>Player_Team_Relationship__c.Season__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Player_Team_Relationship__c.Player__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>last_season_ppg__c</columns>
        <columns>Position__c</columns>
        <columns>Salary__c</columns>
        <columns>NFL_team__c</columns>
        <columns>ByeWeek__c</columns>
        <columns>Team__c</columns>
        <columns>Total_Points_2016__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Players</fullName>
        <columns>NAME</columns>
        <columns>Salary__c</columns>
        <columns>Position__c</columns>
        <columns>last_season_ppg__c</columns>
        <columns>Team__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Salary__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All Skills Players under Contract -</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>